force-app/main/default/objects/Employee__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <formula>$Label.Accepted_List</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>