force-app/main/default/objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev1</fullName>
            </value>
            <value>
                <fullName>Dev2</fullName>
            </value>
            <value>
                <fullName>Dev5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>