force-app/main/default/objects/Employee__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
                <isActive>false</isActive>
                <label>Assistant Manager</label>
            </value>
            <value>
                <fullName>Dev Leader</fullName>
                <isActive>false</isActive>
                <label>Dev Leader</label>
            </value>
            <value>
                <fullName>Dev Manager</fullName>
                <isActive>false</isActive>
                <label>Dev Manager</label>
            </value>
            <value>
                <fullName>Leader</fullName>
                <isActive>false</isActive>
                <label>Leader</label>
            </value>
            <value>
                <fullName>Sales Leader</fullName>
                <isActive>false</isActive>
                <label>Sales Leader</label>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
                <isActive>false</isActive>
                <label>Sales Manager</label>
            </value>
            <value>
                <fullName>Senior Staff</fullName>
                <isActive>false</isActive>
                <label>Senior Staff</label>
            </value>
            <value>
                <fullName>Staff</fullName>
                <isActive>false</isActive>
                <label>Staff</label>
            </value>
            <value>
                <fullName>Sub-Leader</fullName>
                <isActive>false</isActive>
                <label>Sub-Leader</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>