force-app/main/default/objects/Employee__c/fields/Sub_Position__c.field-meta.xml
<CustomField>
    <fullName>Sub_Position__c</fullName>
    <label>Sub Position</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Position__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale PIC</fullName>
            </value>
            <value>
                <fullName>Sale Leader</fullName>
            </value>
            <value>
                <fullName>Dev Leader</fullName>
            </value>
            <value>
                <fullName>Dev Manager</fullName>
            </value>
            <value>
                <fullName>Sale Manager</fullName>
            </value>
            <value>
                <fullName>Dev Pic</fullName>
                <isActive>false</isActive>
                <label>Dev Pic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>