force-app/main/default/objects/Employee__c/listViews/All_Employee.listView-meta.xml
<ListView>
    <fullName>All_Employee</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Employee</label>
</ListView>